Did some modification on the html file to learn about html and css

--- a/hello.html
+++ b/hello.html
@@ -3,8 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>My Web page</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    Hello World!
+    <div id="top">
+      This is the new division of the <span class='name'>webpage</span>.<br>
+      An Unordered list:
+      <ul>
+        <li>One item</li>
+        <li>Another item</li>
+        <li>Yet another item</li>
+      </ul>
+      An Ordered list:
+      <ol>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+      </ol>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Curiosity</th>
+        </tr>
+        <tr>
+          <td>bla</td>
+          <td>bla</td>
+        </tr>
+      </table>
+    </div>
+    <img src="wallpaper.jpg" alt="An Wallpaper Image" width="50%">
+    <div id="bottom">
+      <p>Hello World!!</p>
+    </div>
+    <h1>This is the largest headline</h1>
+    <h2>This is also a largeer headline</h2>
+    <h3>This is a slightly smaller headline</h3>
+    <h4>This is an even samller headline</h4>
+    <h5>This is the second-smallest headline</h5>
+    <h6>This is the smallest headline</h6>
+    <form class="" action="index.html" method="post">
+      <input type="text" placeholder="Full Name" name="Name">
+      <button>Submit!</button>
+    </form>
   </body>
 </html>
