Comment added for the action parameter in the form tag of the html file

--- a/hello.html
+++ b/hello.html
@@ -41,7 +41,8 @@
     <h4>This is an even samller headline</h4>
     <h5>This is the second-smallest headline</h5>
     <h6>This is the smallest headline</h6>
-    <form class="" action="index.html" method="post">
+    <!-- form action attribute is about the location url where the form input data is needed to be sent -->
+    <form action="index.html" method="post">
       <input type="text" placeholder="Full Name" name="Name">
       <button>Submit!</button>
     </form>
